[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sir Cumdog.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/yt5s.io-Get-Stick-Bugged-Lol-EARRAPE.ogv" type="VideoStream" id=3]

[sub_resource type="GDScript" id=1]
script/source = "extends Button


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready(): 
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass



"

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 317.0
margin_top = 672.0
margin_right = 446.0
margin_bottom = 705.0
script = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Button"]
margin_left = 81.0
margin_top = 12.0
margin_right = 129.0
margin_bottom = 37.0
mouse_filter = 2
text = "Ye"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button2" type="Button" parent="."]
margin_left = 1466.0
margin_top = 827.0
margin_right = 1588.0
margin_bottom = 910.0

[node name="RichTextLabel" type="RichTextLabel" parent="Button2"]
margin_left = 81.0
margin_top = 12.0
margin_right = 129.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( -381, -236 )
mouse_filter = 2
text = "Nah"

[node name="Panel" type="Panel" parent="."]
margin_left = 664.0
margin_top = 264.0
margin_right = 959.0
margin_bottom = 330.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
margin_left = 156.0
margin_top = 83.0
margin_right = 338.0
margin_bottom = 139.0
rect_rotation = -5.73193
rect_pivot_offset = Vector2( -381, -236 )
text = "!!!!!!"

[node name="RichTextLabel2" type="RichTextLabel" parent="Panel"]
margin_left = -590.0
margin_top = -62.0
margin_right = -408.0
margin_bottom = -5.99997
rect_scale = Vector2( 2.52, 1.32 )
rect_pivot_offset = Vector2( -381, -236 )
text = "Probeehsol"

[node name="Screen-Shot-2017-04-18-at-143114" type="Sprite" parent="."]
position = Vector2( 875, 632 )
scale = Vector2( 1.09492, 0.371339 )
texture = ExtResource( 1 )

[node name="BB" type="VideoPlayer" parent="."]
visible = false
margin_left = -368.0
margin_top = 587.0
margin_right = 1683.0
margin_bottom = 1935.0
rect_rotation = -29.2
stream = ExtResource( 3 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="finished" from="BB" to="." method="_on_BB_finished"]
